--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -15,90 +15,209 @@
   cursor: pointer;
   overflow: hidden;
   outline: none;
+  border: none;
   z-index: var(--ui-index-1);
+
+  &:active {
+    transform: scale(0.95);
+  }
 }
 
 .solid {
-  background: inherit;
-  border: none;
+  &.primary {
+    background: var(--color-primary);
+
+    @media (hover: hover) {
+      &:hover {
+        background: var(--color-primary-hover);
+      }
+    }
+  }
+
+  &.secondary {
+    background: var(--color-secondary);
+
+    @media (hover: hover) {
+      &:hover {
+        background: var(--color-secondary-hover);
+      }
+    }
+  }
+
+  &.success {
+    background: var(--color-success);
+
+    @media (hover: hover) {
+      &:hover {
+        background: var(--color-success-hover);
+      }
+    }
+  }
+
+  &.warning {
+    background: var(--color-warning);
+
+    @media (hover: hover) {
+      &:hover {
+        background: var(--color-warning-hover);
+      }
+    }
+  }
+
+  &.danger {
+    background: var(--color-error);
+
+    @media (hover: hover) {
+      &:hover {
+        background: var(--color-error-hover);
+      }
+    }
+  }
+
+  &:disabled {
+    color: var(--color-white);
+    background: var(--color-grey);
+
+    @media (hover: hover) {
+      &:hover {
+        background: var(--color-grey);
+      }
+    }
+  }
 }
 
 .outlined {
   color: var(--color-text);
   background: none;
-  border: 2px solid var(--color-primary);
 
-  &:hover {
-    border: 2px solid var(--color-primary-hover);
+  &.primary {
+    border: 2px solid var(--color-primary);
+
+    @media (hover: hover) {
+      &:hover {
+        border: 2px solid var(--color-primary-hover);
+      }
+    }
   }
 
-  &:disabled:hover {
-    border: 2px solid var(--color-primary);
+  &.secondary {
+    border: 2px solid var(--color-secondary);
+
+    @media (hover: hover) {
+      &:hover {
+        border: 2px solid var(--color-secondary-hover);
+      }
+    }
+  }
+
+  &.success {
+    border: 2px solid var(--color-success);
+
+    @media (hover: hover) {
+      &:hover {
+        border: 2px solid var(--color-success-hover);
+      }
+    }
+  }
+
+  &.warning {
+    border: 2px solid var(--color-warning);
+
+    @media (hover: hover) {
+      &:hover {
+        border: 2px solid var(--color-warning-hover);
+      }
+    }
+  }
+
+  &.danger {
+    border: 2px solid var(--color-error);
+
+    @media (hover: hover) {
+      &:hover {
+        border: 2px solid var(--color-error-hover);
+      }
+    }
+  }
+
+  &:disabled {
+    border: 2px solid var(--color-grey);
+
+    @media (hover: hover) {
+      &:hover {
+        border: 2px solid var(--color-grey);
+      }
+    }
   }
 }
 
 .clear {
   color: var(--color-text);
   background: transparent;
-  border: none;
+
+  &.primary {
+    @media (hover: hover) {
+      &:hover {
+        color: var(--color-primary);
+      }
+    }
+  }
+
+  &.secondary {
+    @media (hover: hover) {
+      &:hover {
+        color: var(--color-secondary);
+      }
+    }
+  }
+
+  &.success {
+    color: var(--color-success);
+
+    @media (hover: hover) {
+      &:hover {
+        color: var(--color-success-hover);
+      }
+    }
+  }
+
+  &.warning {
+    color: var(--color-warning);
+
+    @media (hover: hover) {
+      &:hover {
+        color: var(--color-warning-hover);
+      }
+    }
+  }
+
+  &.danger {
+    color: var(--color-error);
+
+    @media (hover: hover) {
+      &:hover {
+        color: var(--color-error-hover);
+      }
+    }
+  }
 
   &:disabled {
     background: transparent;
 
-    &:hover {
-      background: transparent;
+    @media (hover: hover) {
+      &:hover {
+        color: var(--color-text-disabled);
+      }
     }
   }
 }
 
-.primary {
-  background: var(--color-primary);
-
-  &:hover {
-    background: var(--color-primary-hover);
-  }
-}
-
-.secondary {
-  background: var(--color-secondary);
-
-  &:hover {
-    background: var(--color-secondary-hover);
-  }
-}
-
-.success {
-  background: var(--color-success);
-
-  &:hover {
-    background: var(--color-success-hover);
-  }
-}
-
-.warning {
-  background: var(--color-warning);
-
-  &:hover {
-    background: var(--color-warning-hover);
-  }
-}
-
-.danger {
-  background: var(--color-error);
-
-  &:hover {
-    background: var(--color-error-hover);
-  }
-}
-
 .disabled {
-  color: var(--color-text-disabled) !important;
-  background: var(--color-grey);
-
+  color: var(--color-text-disabled);
   cursor: default;
 
-  &:hover {
-    background: var(--color-grey);
+  &:active {
+    transform: none;
   }
 }
 
