feat(overlay): add overlay

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -22,6 +22,7 @@
   // Colors
   --bg-primary: #f7f8fa;
   --bg-secondary: #f7f8fa;
+  --overlay-color: #18191a;
 
   --color-primary: #7284fc;
   --color-primary-hover: #929ff7;
