fix(divider): fix styles

--- a/src/components/divider/Divider.module.scss
+++ b/src/components/divider/Divider.module.scss
@@ -1,13 +1,14 @@
 .divider {
   background-color: var(--color-grey);
+  border-radius: 10px;
 
   &.horizontal {
     width: 100%;
-    height: 1px;
+    height: 1.5px;
   }
 
   &.vertical {
-    width: 1px;
+    width: 1.5px;
     height: auto;
     align-self: stretch;
   }
