--- a/src/components/badge/Badge.module.scss
+++ b/src/components/badge/Badge.module.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
 
-    position: relative;
+    position: absolute;
     top: 0;
     right: 0;
     transform: translate(50%, -25%);
