fix(style): update vars

--- a/src/components/accordion/AccordionItem.module.scss
+++ b/src/components/accordion/AccordionItem.module.scss
@@ -10,8 +10,8 @@
 
     .headerTitle {
       font-size: var(--fs-lg);
-      font-weight: var(--fw-normal);
-      line-height: var(--lh);
+      font-weight: var(--fw-medium);
+      line-height: var(--lh-body-1);
     }
 
     .arrowIcon {
