--- a/src/components/badge/Badge.module.scss
+++ b/src/components/badge/Badge.module.scss
@@ -18,7 +18,7 @@
     width: 18px;
     height: 18px;
     padding: 2px;
-    font-size: var(--fs-xsm);
+    font-size: var(--fs-body-2);
     border-radius: 50%;
     pointer-events: none;
     z-index: var(--ui-index-1);
