--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -9,6 +9,11 @@
   @include animation.transition;
   @include typography.typography;
 
+  --border-radius-xs: 5px;
+  --border-radius-sm: 8px;
+  --border-radius-md: 12px;
+  --border-radius-lg: 14px;
+
   //
   //@deprecated
   //
