fix(colors): updated colors pallet

--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -14,7 +14,7 @@
 
   --brand-100: #f4ebff;
   --brand-200: #e9d7fe;
-  --brand-300: #d6bbfb;
+  --brand-300: #ceadff;
   --brand-400: #b692f6;
   --brand-500: #9e77ed;
   --brand-600: #7f56d9;
@@ -51,4 +51,7 @@
   --success-700: #027a48;
   --success-800: #05603a;
   --success-900: #054f31;
+
+  --skeleton-bg: #d8d8d9;
+  --skeleton-foreground: #e2e2e2;
 }
