--- a/src/components/badge/Badge.module.scss
+++ b/src/components/badge/Badge.module.scss
@@ -12,8 +12,8 @@
     right: 0;
     transform: translate(50%, -25%);
 
-    background: var(--color-primary);
-    color: var(--color-white);
+    background: var(--brand-500);
+    color: var(--white);
 
     width: 18px;
     height: 18px;
