--- a/src/components/skeleton/Skeleton.module.scss
+++ b/src/components/skeleton/Skeleton.module.scss
@@ -1,6 +1,6 @@
 .skeleton {
   width: 100%;
-  background-color: var(--bg-skeleton);
+  background-color: var(--skeleton-bg);
   overflow: hidden;
   position: relative;
 
@@ -17,7 +17,7 @@
     background: linear-gradient(
       to right,
       transparent 0%,
-      var(--color-foreground) 50%,
+      var(--skeleton-foreground) 50%,
       transparent 100%
     );
     animation: load 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
