--- a/src/assets/styles/_normalize.scss
+++ b/src/assets/styles/_normalize.scss
@@ -32,7 +32,7 @@ html,
 body {
   line-height: 1;
   font-size: var(--fs-body-1);
-  color: var(--color-text);
+  color: var(--grey-900);
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
