--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -14,7 +14,7 @@ $fz_lg: $default_fz * 1.4;
   min-width: 40px;
   gap: 8px;
 
-  color: var(--color-white);
+  color: var(--white);
 
   cursor: pointer;
   overflow: hidden;
@@ -46,97 +46,97 @@ $fz_lg: $default_fz * 1.4;
 }
 
 .solid {
-  color: var(--color-white);
+  color: var(--white);
 
   &.disabled {
-    color: var(--color-white);
+    color: var(--white);
   }
 
   &.primary {
-    background: var(--color-primary);
+    background: var(--brand-600);
 
     @media (hover: hover) {
       &:hover {
-        background: var(--color-primary-hover);
+        background: var(--brand-500);
       }
     }
 
     &:disabled {
       @media (hover: hover) {
         &:hover {
-          background: var(--color-primary);
+          background: var(--brand-600);
         }
       }
     }
   }
 
   &.secondary {
-    background: var(--color-secondary);
+    background: var(--brand-400);
 
     @media (hover: hover) {
       &:hover {
-        background: var(--color-secondary-hover);
+        background: var(--brand-300);
       }
     }
 
     &:disabled {
       @media (hover: hover) {
         &:hover {
-          background: var(--color-secondary);
+          background: var(--brand-400);
         }
       }
     }
   }
 
   &.success {
-    background: var(--color-success);
+    background: var(--success-500);
 
     @media (hover: hover) {
       &:hover {
-        background: var(--color-success-hover);
+        background: var(--success-400);
       }
     }
 
     &:disabled {
       @media (hover: hover) {
         &:hover {
-          background: var(--color-success);
+          background: var(--success-500);
         }
       }
     }
   }
 
   &.warning {
-    background: var(--color-warning);
+    background: var(--warning-500);
 
     @media (hover: hover) {
       &:hover {
-        background: var(--color-warning-hover);
+        background: var(--warning-400);
       }
     }
 
     &:disabled {
       @media (hover: hover) {
         &:hover {
-          background: var(--color-warning);
+          background: var(--warning-500);
         }
       }
     }
   }
 
   &.danger {
-    background: var(--color-error);
+    background: var(--error-500);
 
     @media (hover: hover) {
       &:hover {
-        background: var(--color-error-hover);
+        background: var(--error-400);
       }
     }
 
     &:disabled {
       @media (hover: hover) {
         &:hover {
-          background: var(--color-error);
+          background: var(--error-500);
         }
       }
     }
@@ -144,113 +144,109 @@ $fz_lg: $default_fz * 1.4;
 }
 
 .outlined {
-  color: var(--color-text);
+  color: var(--grey-900);
   background: inherit;
 
-  &:disabled {
-    border: 2px solid var(--color-grey);
-  }
-
   &.primary {
-    color: var(--color-primary);
-    border: 2px solid var(--color-primary);
+    color: var(--brand-600);
+    border: 2px solid var(--brand-600);
 
     @media (hover: hover) {
       &:hover {
-        color: var(--color-primary-hover);
-        border: 2px solid var(--color-primary-hover);
+        color: var(--brand-500);
+        border: 2px solid var(--brand-500);
       }
     }
 
     &:disabled {
       @media (hover: hover) {
         &:hover {
-          color: var(--color-primary);
-          border: 2px solid var(--color-primary);
+          color: var(--brand-600);
+          border: 2px solid var(--brand-600);
         }
       }
     }
   }
 
   &.secondary {
-    color: var(--color-secondary);
-    border: 2px solid var(--color-secondary);
+    color: var(--brand-400);
+    border: 2px solid var(--brand-400);
 
     @media (hover: hover) {
       &:hover {
-        color: var(--color-secondary-hover);
-        border: 2px solid var(--color-secondary-hover);
+        color: var(--brand-300);
+        border: 2px solid var(--brand-300);
       }
     }
 
     &:disabled {
       @media (hover: hover) {
         &:hover {
-          color: var(--color-secondary);
-          border: 2px solid var(--color-secondary);
+          color: var(--brand-400);
+          border: 2px solid var(--brand-400);
         }
       }
     }
   }
 
   &.success {
-    color: var(--color-success);
-    border: 2px solid var(--color-success);
+    color: var(--success-500);
+    border: 2px solid var(--success-500);
 
     @media (hover: hover) {
       &:hover {
-        color: var(--color-success-hover);
-        border: 2px solid var(--color-success-hover);
+        color: var(--success-400);
+        border: 2px solid var(--success-400);
       }
     }
 
     &:disabled {
       @media (hover: hover) {
         &:hover {
-          color: var(--color-success);
-          border: 2px solid var(--color-success);
+          color: var(--success-500);
+          border: 2px solid var(--success-500);
         }
       }
     }
   }
 
   &.warning {
-    color: var(--color-warning);
-    border: 2px solid var(--color-warning);
+    color: var(--warning-500);
+    border: 2px solid var(--warning-500);
 
     @media (hover: hover) {
       &:hover {
-        color: var(--color-warning-hover);
-        border: 2px solid var(--color-warning-hover);
+        color: var(--warning-400);
+        border: 2px solid var(--warning-400);
       }
     }
 
     &:disabled {
       @media (hover: hover) {
         &:hover {
-          color: var(--color-warning);
-          border: 2px solid var(--color-warning);
+          color: var(--warning-500);
+          border: 2px solid var(--warning-500);
         }
       }
     }
   }
 
   &.danger {
-    color: var(--color-error);
-    border: 2px solid var(--color-error);
+    color: var(--error-500);
+    border: 2px solid var(--error-500);
 
     @media (hover: hover) {
       &:hover {
-        color: var(--color-error-hover);
-        border: 2px solid var(--color-error-hover);
+        color: var(--error-400);
+        border: 2px solid var(--error-400);
       }
     }
 
     &:disabled {
       @media (hover: hover) {
         &:hover {
-          color: var(--color-error);
-          border: 2px solid var(--color-error);
+          color: var(--error-500);
+          border: 2px solid var(--error-500);
         }
       }
     }
@@ -261,90 +257,90 @@ $fz_lg: $default_fz * 1.4;
   background: inherit;
 
   &.primary {
-    color: var(--color-text);
+    color: var(--grey-900);
 
     @media (hover: hover) {
       &:hover {
-        color: var(--color-primary);
+        color: var(--brand-600);
       }
     }
 
     &:disabled {
       @media (hover: hover) {
         &:hover {
-          color: var(--color-text);
+          color: var(--grey-900);
         }
       }
     }
   }
 
   &.secondary {
-    color: var(--color-text);
+    color: var(--grey-900);
 
     @media (hover: hover) {
       &:hover {
-        color: var(--color-secondary);
+        color: var(--brand-400);
       }
     }
 
     &:disabled {
       @media (hover: hover) {
         &:hover {
-          color: var(--color-text);
+          color: var(--grey-900);
         }
       }
     }
   }
 
   &.success {
-    color: var(--color-success);
+    color: var(--success-500);
 
     @media (hover: hover) {
       &:hover {
-        color: var(--color-success-hover);
+        color: var(--success-400);
       }
     }
 
     &:disabled {
       @media (hover: hover) {
         &:hover {
-          color: var(--color-success);
+          color: var(--success-500);
         }
       }
     }
   }
 
   &.warning {
-    color: var(--color-warning);
+    color: var(--warning-500);
 
     @media (hover: hover) {
       &:hover {
-        color: var(--color-warning-hover);
+        color: var(--warning-400);
       }
     }
 
     &:disabled {
       @media (hover: hover) {
         &:hover {
-          color: var(--color-warning);
+          color: var(--warning-500);
         }
       }
     }
   }
 
   &.danger {
-    color: var(--color-error);
+    color: var(--error-800);
 
     @media (hover: hover) {
       &:hover {
-        color: var(--color-error-hover);
+        color: var(--error-700);
       }
     }
 
     &:disabled {
       @media (hover: hover) {
         &:hover {
-          color: var(--color-error);
+          color: var(--error-800);
         }
       }
     }
@@ -354,7 +350,7 @@ $fz_lg: $default_fz * 1.4;
   &.size_md,
   &.size_lg {
     height: 100%;
-    padding: 5px;
+    padding: 2px;
   }
 
   &.size_md {
