--- a/src/components/divider/Divider.module.scss
+++ b/src/components/divider/Divider.module.scss
@@ -1,5 +1,5 @@
 .divider {
-  background-color: var(--color-grey);
+  background-color: var(--grey-300);
   border-radius: 10px;
 
   &.horizontal {
