--- a/src/components/tabs/Tabs.module.scss
+++ b/src/components/tabs/Tabs.module.scss
@@ -21,6 +21,7 @@
   position: relative;
   height: 100%;
   cursor: pointer;
+  color: var(--nx-color-main-text);
 
   &.active::after {
     position: absolute;
