--- a/src/components/typography/Typography.module.scss
+++ b/src/components/typography/Typography.module.scss
@@ -28,7 +28,7 @@
     text-align: right;
   }
   &.default {
-    color: var(--black);
+    color: var(--nx-color-main-text);
   }
   &.danger {
     color: var(--error-500);
